[package]
name = "phoenix-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-native-certs = "0.7"
webpki-roots = "0.26"
bytes = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
url = "2"
socket2 = "0.5"
futures = "0.3"
serde = { version = "1", features = ["derive"] }