[package]
name = "phoenix-report"
version = "0.1.0"
edition = "2021"
description = "Report generation for Phoenix HTTP/2 stress testing"
license = "MIT"
authors = ["Phoenix Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "phoenix_report"
path = "src/lib.rs"